<resources>
    <string name="msgFeatureNotAvailContactAdmin">Feature is not available.\nContact to admin</string>
    <string name="msgCommingSoon">Coming soon</string>
    <string name="app_name">Jobio Office</string>
    <string name="strHiya">Hiya</string>
    <string name="strNA">NA</string>
    <string name="strEmail">Email</string>
    <string name="strPassword">Password</string>
    <string name="strNotUserName">Not User Name?</string>
    <string name="strEnterPassword">Enter password</string>
    <string name="strEnterValidEmail">Enter valid email id</string>
    <string name="strForgotPassword">Forgot Password</string>
    <string name="strLogin">Login</string>
    <string name="strCopyRight">Copyright © 2017 Jobio. All rights reserved.</string>
    <string name="strJobio">Jobio</string>
    <string name="strEnterManuallyBarCode">Enter manually item bar code</string>
    <string name="strCancel">Cancel</string>
    <string name="strOK">OK</string>
    <string name="strPoweredby">Poweredby:</string>
    <string name="strEnterBarCode">Enter Bar code</string>
    <string name="strQRNotExist">Company domain does not exits.</string>
    <string name="strScanCompanyQR">Scan Company domain name</string>
    <string name="strEnterManuallyQRCode">Enter manually company domain name</string>
    <string name="strEnterQRCode">Enter company domain name</string>
    <string name="msgScanQRCode">Scan QR code to setup company.</string>
    <string name="strCheckmailQRCode">Open welcome email OR website screen on your computer or mobile device to scan.</string>
    <string name="strOR">OR</string>
    <string name="strInternetNotAvaiable">Internet service is not available</string>
    <string name="strUnableToParseData">Unable to parse data</string>
    <string name="strServerNotResponding">Server not responding</string>
    <string name="strRequestTimeout">Request time out</string>
    <string name="strSessionExpire">Session has been expire</string>
    <string name="strInvalidUserNameAndPassword">Invalid username or password</string>
    <string name="strInvalidUserName">This email id is not registered with us!</string>
    <string name="strDatacannotReceive">Unable to receive data from network</string>
    <string name="strServerError">Server error</string>
    <string name="strClientError">Invalid URL request</string>
    <string name="msgInvalidCreditialsAsNotStaffMember">Invalid credentials, unfortunately you are not subscribed as staff member</string>
    <string name="title_activity_ac_login">acLogin</string>
    <string name="msgSyncNoInternet">Internet not available, data will be sync later</string>
    <string name="title_activity_ac_message_list">acMessageList</string>
    <string name="strJobioMessage">Jobio Message</string>
    <string name="title_activity_ac_home">acHome</string>
    <string name="strResetPassword">Reset password</string>
    <string name="strOldPassword">Old password</string>
    <string name="strNewPassword">New password</string>
    <string name="strConfirmPassword">Confirm password</string>
    <string name="msgNewandConfirmPassword">New password and confirm password should same.</string>
    <string name="msgInvalidOldPassword">Invalid old password.</string>
    <string name="msgNewPasswordShouldDiffentThanOld">New password should be different than old password.</string>
    <string name="strSave">Save</string>
    <string name="strFeedback">Feedback</string>
    <string name="msgFeedbackMsg">How happy are\n you\n with this app?</string>
    <string-array name="arrFeedback">
        <item>Fantastic, Love it ! :)</item>
        <item>Working Perfect!</item>
        <item>Hmmm It’s Okay!</item>
        <item>It Could be better!</item>
        <item>It’s Bugging me, Worse!</item>
        <item>No Thanks!</item>
    </string-array>
    <string name="title_activity_ac_report_issue">acReportIssue</string>
    <string name="strSend">Send</string>
    <string name="strSubject">SUBJECT</string>
    <string name="strIssue">ISSUE</string>
    <string name="strSuggestion">SUGGESTION</string>
    <string name="strReportIssue">Report an Issue</string>
    <string name="strReportSuggestion">Report a Suggestion</string>
    <string name="strIssueDescription">Issue Description</string>
    <string name="strSuggestionDescription">Suggestion Description</string>
    <string name="strLogFileReady">LOGS FILE READY</string>
    <string name="strMastercleanMessage">You are about to delete all data from this app, Are you sure want to do this?</string>
    <string name="strConfirm">Confirm</string>
    <string name="msgNoCrewMember">NO CREW MEMBER</string>
    <string name="msgTypeMessage">Type a messsage</string>
    <string name="msgNoMessage">NO MESSAGE</string>
    <string name="strTalkTous">Talk to us</string>
    <string name="strHelpArticle">Help Articles</string>
    <string name="strAboutUs">About us</string>
    <string name="strMasterClear">Master Clear</string>
    <string name="strToday">Today</string>
    <string name="strTomorrow">Tomorrow</string>
    <string name="strYesterday">Yesterday</string>
    <string name="strStock">Stock</string>
    <string name="strInOut">In/Out</string>
    <string name="strDate">Date</string>
    <string name="strAsset">Asset</string>
    <string name="strSync">Sync</string>
    <string name="strMessage">Message</string>
    <string name="strSettings">Setting</string>
    <string name="strLogout">Logout</string>
    <string name="title_activity_ac_stock">acStock</string>
    <string name="title_activity_ac_asset">acAsset</string>
    <string name="title_activity_ac_setting">acSetting</string>
    <string name="title_activity_ac_sync">acSync</string>
    <string name="msgLogoutConfirmation">Are you sure you want to logout?</string>
    <string name="title_activity_ac_qrcode_scanner">acQRCodeScanner</string>
    <string name="title_activity_ac_manual_qrcode">acManualQRCode</string>
    <string name="strVersion">Version</string>
    <string name="strForgotPasswordQuestion">Forgot Password?</string>
    <string name="strEmailSent">Email has been sent!</string>
    <string name="strNoProblemItHappens">No Problem, It happens. \n\nEnter your email address below and we\'ll send new password.</string>
    <string name="strSendNewPassword">SEND NEW PASSWORD</string>
    <string name="msgEnterEmailNotExist">Entered email id is not exist, try again.</string>
    <string name="msgForgotPasswordEmailConfirmation">
  We have sent you an email with new password to your email, please follow instruction in the email to reset password.\n\n
  <u>A note about spam filter,</u>
  \nIf you do not get an email from us within a few minutes please be sure to check your spam filter.\nThe email will be coming from \"no-reply@jobio.io\"
  </string>
    <string name="strDone">DONE</string>
    <string name="strEnterEmailId">Enter email Id</string>
    <string name="msgGPSNotAvailable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strNoReferenceFound">No reference found</string>
    <string name="msgAlreadyLogin">You are already login on</string>
    <string name="msgStillLoginProblem">If still unable to login then contact \"support@jobio.io\"</string>
    <string name="strNot">Not</string>
    <string name="strHome">Home</string>
    <string name="strAt">at</string>
    <string name="strUnread">Unread</string>
    <string name="strService">Service</string>
    <string name="strInspect">Inspect</string>
    <string-array name="arrAsset">
        <item>Asset</item>
        <item>Inspect</item>
        <item>Service</item>
    </string-array>
    <string-array name="arrStock">
        <item>Scan</item>
        <item>Stock</item>
        <item>Transaction</item>
    </string-array>
    <string name="msgNoService">No pending service</string>
    <string name="msgNoInspect">No pending inspection</string>
    <string name="msgNoItem">No Item</string>
    <string name="msgNoAsset">No asset</string>
    <string name="msgAssetIHold">Asset(s) I hold</string>
    <string name="msgInspectToCarryOut">Inspection(s) to carry out</string>
    <string name="msgServiceToCarryOut">Service(s) to carry out</string>
    <string name="msgDescNotAvail">Description is not available</string>
    <string name="title_activity_ac_asset_detail">acAssetDetail</string>
    <string name="strAssetDetail">Asset Detail</string>
    <string name="strItemDetail">Item Detail</string>
    <string name="strSearchItem">Search Item</string>
    <string name="strAssetDesc">Asset Description</string>
    <string name="strModel">Model</string>
    <string name="strManufacturer">Manufacturer</string>
    <string name="strSerialNumber">Serial Number</string>
    <string name="strBarcode">Barcode</string>
    <string name="strAssetLocation">Asset Location</string>
    <string name="strCost">Cost</string>
    <string name="strPrice">Price</string>
    <string name="strCurrentValue">Current Value</string>
    <string name="strPurchaseFrom">Purchase From</string>
    <string name="strDateExpire">Expire Date</string>
    <string name="strNoExpiry">No Expiry</string>
    <string name="strStatus">Status</string>
    <string name="strStartDate">Start Date</string>
    <string name="strEndDate">End Date</string>
    <string name="msgAssetHolder">Asset Holders(s)</string>
    <string name="title_activity_ac_search_asset_by_qr">acSearchAssetByQR</string>
    <string name="msgScanQRCodeToSearchAsset">Scan QR code to search asset.</string>
    <string name="msgScanBarCodeToSearchItem">Scan Barcode code to search item.</string>
    <string name="msgSearchAssetbyClick">Search asset by click on asset name</string>
    <string name="strNew">NEW</string>
    <string name="strPending">Pending</string>
    <string name="msgNotAttendedYet">Not attended yet.</string>
    <string name="title_activity_ac_inspect_transaction">acInspectTransaction</string>
    <string name="msgEnterInspectionName">Enter inspection name</string>
    <string name="msgEnterInspectionNote">Enter inspection note</string>
    <string name="msgEnterCost">Enter cost</string>
    <string name="msgEnterPrice">Enter price</string>
    <string name="msgEnterQuantity">Enter quantity</string>
    <string name="msgItemDetailNotAvailAtServer">Unfortunately item detail with respect to entered barcode is not available on server. </string>
    <string name="msgAssetDetailNotAvail">Unfortunately asset detail with respect to entered QR code is not available. </string>
    <string name="strInspectionName">Inspection Name</string>
    <string name="strAssetName">Asset Name</string>
    <string name="strAssignedTo">Assigned To</string>
    <string name="strInspectionDate">Inspection Date</string>
    <string name="strInspectionTime">Inspection Time</string>
    <string name="strInspectionNote">Inspection Note</string>
    <string name="strTakePicture">Take Picture</string>
    <string name="msgSelectInpectStatus">Select inspect status</string>
    <string name="strNotAttendedYet">NOT ATTENDED YET</string>
    <string name="strPostpone">POSTPONE</string>
    <string name="strNoNeedWorkingFine">NO NEED WORKING FINE</string>
    <string name="title_activity_ac_service_transaction">acServiceTransaction</string>
    <string name="strServiceName">Service Name</string>
    <string name="strPerformBy">Perform By</string>
    <string name="strServiceFirmName">Service Firm name</string>
    <string name="strServiceDate">Service Date</string>
    <string name="strTransaction">Transaction</string>
    <string name="strRestart">Restart</string>
    <string name="strUnsyncList">UNSYNC LIST</string>
    <string name="strNetwork">NETWORK</string>
    <string name="strConnected">Connected</string>
    <string name="strDisconnected">Disconnected</string>
    <string name="strSyncService">SYNC SERVICE</string>
</resources>