<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".acLogin">
    <item
        android:id="@+id/menuMain"
        android:icon="@drawable/ic_topmenu"
        android:title=""
        app:showAsAction="always">
        <item
            android:id="@+id/menuTalkToUs"
            android:title="@string/strTalkTous"></item>
        <item
            android:id="@+id/menuHelpArticle"
            android:title="@string/strHelpArticle"></item>
        <item
            android:id="@+id/menuAboutUs"
            android:title="@string/strAboutUs"></item>
        <item
            android:id="@+id/menuMasterClear"
            android:title="@string/strMasterClear"></item>
    </item>
</menu>