<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ViewPadding">


        <TextView
            style="@style/stySubTitleTile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnClose"
            android:layout_toRightOf="@id/imgIcon"
            android:gravity="center_vertical"
            android:text="@string/strResetPassword"
            app:font="@{`Ubuntu-C`}" />

        <me.zhanghai.android.materialedittext.MaterialTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ViewMargin">

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/edOldPassword"
                style="@style/singlelineeditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strOldPassword"
                android:inputType="textPassword"
                app:font="@{`Ubuntu-L`}" />
        </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

        <me.zhanghai.android.materialedittext.MaterialTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ViewMargin">

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/edNewPassword"
                style="@style/singlelineeditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strNewPassword"
                android:inputType="textPassword"
                app:font="@{`Ubuntu-L`}" />
        </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

        <me.zhanghai.android.materialedittext.MaterialTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ViewMargin">

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/edConfirmPassword"
                style="@style/singlelineeditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strConfirmPassword"
                android:inputType="textPassword"
                app:font="@{`Ubuntu-L`}" />
        </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

        <TextView
            android:id="@+id/txtMessage"
            style="@style/styDescSmallRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/ViewMargin"
            android:visibility="gone"
            app:font="@{`Ubuntu-L`}" />

        <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ViewMargin"
            rdv:rdv_rippleAnimationDuration="600"
            rdv:rdv_rippleAnimationFrames="60"
            rdv:rdv_rippleAnimationPeakFrame="15"
            rdv:rdv_rippleColor="@android:color/white"
            rdv:rdv_rippleMaxAlpha="0.8"
            rdv:rdv_rippleRadius="@dimen/rippleRadius">

            <Button
                android:id="@+id/btnSave"
                style="@style/btnWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/ViewPadding"
                android:text="@string/strSave"
                app:font="@{`Ubuntu-L`}" />
        </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
    </LinearLayout>
</layout>