<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/ViewPadding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/ViewMargin"
                android:background="@color/transperant"
                android:src="@drawable/ic_close_tilt" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/styTitleTilt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/strForgotPasswordQuestion"
                android:textStyle="bold"
                app:font="@{`Ubuntu-M`}" />

            <TextView
                style="@style/stySubTitleTiltMultiline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/ViewMargin"
                android:text="@string/strNoProblemItHappens"
                app:font="@{`Ubuntu-C`}" />

            <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ViewMargin">

                <me.zhanghai.android.materialedittext.MaterialEditText
                    android:id="@+id/edUserName"
                    style="@style/singlelineeditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strEmail"
                    android:inputType="textEmailAddress"
                    app:font="@{`Ubuntu-L`}" />
            </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <utility.DotProgressBar
                    android:id="@+id/dot_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dorProgressBarheight"
                    android:visibility="gone"
                    custom:amount="5"
                    custom:duration="@android:integer/config_mediumAnimTime"
                    custom:endColor="@color/tilt"
                    custom:startColor="@color/tilt" />
            </LinearLayout>


            <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/ViewMargin"
                android:gravity="right"
                rdv:rdv_rippleAnimationDuration="600"
                rdv:rdv_rippleAnimationFrames="60"
                rdv:rdv_rippleAnimationPeakFrame="15"
                rdv:rdv_rippleColor="@android:color/white"
                rdv:rdv_rippleMaxAlpha="0.8"
                rdv:rdv_rippleRadius="@dimen/rippleRadius">

                <Button
                    android:id="@+id/btnSendNewPassword"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/buttonHeight"
                    android:background="@color/tilt"
                    android:padding="@dimen/ViewPadding"
                    android:text="@string/strSendNewPassword"
                    app:font="@{`Ubuntu-L`}" />
            </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/styTitleTilt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/strEmailSent"
                android:textStyle="bold"
                app:font="@{`Ubuntu-M`}" />

            <TextView
                style="@style/stySubTitleTiltMultiline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/ViewMargin"
                android:text="@string/msgForgotPasswordEmailConfirmation"
                app:font="@{`Ubuntu-C`}" />

            <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/ViewMargin"
                android:gravity="right"
                rdv:rdv_rippleAnimationDuration="600"
                rdv:rdv_rippleAnimationFrames="60"
                rdv:rdv_rippleAnimationPeakFrame="15"
                rdv:rdv_rippleColor="@android:color/white"
                rdv:rdv_rippleMaxAlpha="0.8"
                rdv:rdv_rippleRadius="@dimen/rippleRadius">

                <Button
                    android:id="@+id/btnDone"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/buttonHeight"
                    android:background="@color/tilt"
                    android:padding="@dimen/ViewPadding"
                    android:text="@string/strDone"
                    app:font="@{`Ubuntu-L`}" />
            </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
        </LinearLayout>
    </LinearLayout>
</layout>